Added README.md with deploy instructions

--- a/sample_settings.json
+++ b/sample_settings.json
@@ -6,5 +6,22 @@
       "reconnectBeforeCountdownText":"Tratando de reconectar en ",
       "reconnectAfterCountdownText":"segundos."
     }
+  },
+  "AWSAccessKeyId": "",
+  "AWSSecretAccessKey": "",
+  "s3": {
+    "key": "",
+    "secret": ""
+  },
+  "signupCode": "",
+  "kadira": { 
+    "appId": "", 
+    "appSecret": "" 
+  },
+  "smtp": {
+    "username": "",
+    "password": "",
+    "host": "",
+    "port": ""
   }
 }
